--- a/src/scss/molecules/_playback-controls.scss
+++ b/src/scss/molecules/_playback-controls.scss
@@ -2,6 +2,7 @@
 	padding: 0.75rem;
 	display: flex;
 	justify-content: space-between;
+	flex-grow: 1;
 	align-items: center;
 
 	.play {
@@ -9,4 +10,10 @@
 		border: 1px solid #fff;
 		border-radius: 100%;
 	}
+}
+
+%playback-controls {
+	display: flex;
+	justify-content: space-between;
+	padding: 0.75rem;
 }
