--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,11 +7,15 @@
 body {
 	margin: 0;
 	background-image: linear-gradient(to bottom, #ff5913, #e82713 50%);
-	background-size: cover;
 	background-repeat: no-repeat;
-	min-height: 100vh;
 	color: #fff;
 	font-family: sans-serif;
+}
+
+.page {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
 }
 
 button {
@@ -27,9 +31,5 @@ nav {
 }
 
 input[type=checkbox] {
-	@extend %checkbox-base;
-}
-
-input[type=checkbox]:checked {
-	@extend %checkbox-active;
+	@extend %switch-button;
 }
