--- a/src/scss/molecules/_playback-controls.scss
+++ b/src/scss/molecules/_playback-controls.scss
@@ -2,7 +2,6 @@
 	padding: 0.75rem;
 	display: flex;
 	justify-content: space-between;
-	flex-grow: 1;
 	align-items: center;
 
 	.play {
@@ -10,10 +9,20 @@
 		border: 1px solid #fff;
 		border-radius: 100%;
 	}
+
+	button { display: block; }
 }
 
-%playback-controls {
+%playback-controls-secondary {
 	display: flex;
 	justify-content: space-between;
-	padding: 0.75rem;
+	padding: 1rem;
+
+	.symbol-infinity {
+		font-size: 2em;
+		line-height: 0.5em;
+		vertical-align: middle;
+		font-family: monospace;
+		margin-top: -0.125em;
+	}
 }
