--- a/src/scss/organisms/_playback-settings.scss
+++ b/src/scss/organisms/_playback-settings.scss
@@ -1,3 +1,8 @@
 %playback-settings {
+	padding: 1rem;
 	background-color: rgba(21, 21, 23, 0.5);
+
+	.playback-controls + .volume-slider {
+		margin-top: 0.75em;
+	}
 }
